fix number of errors
*remove unnecessary comments
*modify button id name
*remove onclick from html
*move top-button to left, so its not covering social-media buttons

--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -215,23 +215,22 @@ body {
 /*top-button*/
 
 
-#myBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: #3f79ff; /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 50px; /* Rounded corners */
+#my-Btn {
+    display: none;
+    position: fixed;
+    bottom: 15px;
+    left: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #3f79ff;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50px;
     font-weight: bold;
 }
 
-#myBtn:hover {
-    /*background-color: white; !* Add a dark-grey background on hover *!*/
+#my-Btn:hover {
     color: #ff6f2f
 }
